--- a/docs/docs-ref-autogen/visio/visio/visio.application.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.application.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'visio!Visio.Application:class'
     summary: |-
-      <span data-ttu-id="edb3c-101">表示 Application。</span><span class="sxs-lookup"><span data-stu-id="edb3c-101">Represents the Application.</span></span>
+      表示 Application。
 
-      <span data-ttu-id="edb3c-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="edb3c-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.Application
     fullName: Visio.Application
     langs:
       - typeScript
     type: class
     extends:
-      - 'visio!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: visio!
     children:
       - 'visio!Visio.Application#context:member'
@@ -26,7 +26,7 @@ items:
       - 'visio!Visio.Application#showToolbars:member'
       - 'visio!Visio.Application#toJSON:member(1)'
   - uid: 'visio!Visio.Application#context:member'
-    summary: <span data-ttu-id="edb3c-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="edb3c-103">The request context associated with the object.</span></span> <span data-ttu-id="edb3c-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="edb3c-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -38,15 +38,15 @@ items:
         type:
           - 'visio!Visio.RequestContext:class'
   - uid: 'visio!Visio.Application#load:member(1)'
-    summary: <span data-ttu-id="edb3c-105">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="edb3c-105">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="edb3c-106">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="edb3c-106">You must call "context.sync()" before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      <span data-ttu-id="edb3c-107">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="edb3c-107">In addition to this signature, this method has the following signatures:</span></span>
+      除了此签名之外，此方法还具有以下签名：
 
-      <span data-ttu-id="edb3c-108">`load(option?: string | string[]): Visio.Application`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="edb3c-108">`load(option?: string | string[]): Visio.Application` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      `load(option?: string | string[]): Visio.Application`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      <span data-ttu-id="edb3c-109">`load(option?: { select?: string; expand?: string; }): Visio.Application`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="edb3c-109">`load(option?: { select?: string; expand?: string; }): Visio.Application` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      `load(option?: { select?: string; expand?: string; }): Visio.Application`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      <span data-ttu-id="edb3c-110">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Application`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="edb3c-110">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Application` - Only available on collection types.</span></span> <span data-ttu-id="edb3c-111">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="edb3c-111">It is similar to the preceding signature.</span></span> <span data-ttu-id="edb3c-112">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="edb3c-112">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="edb3c-113">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="edb3c-113">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="edb3c-114">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="edb3c-114">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Application`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -64,7 +64,7 @@ items:
           type:
             - 'visio!Visio.Interfaces.ApplicationLoadOptions:interface'
   - uid: 'visio!Visio.Application#load:member(2)'
-    summary: <span data-ttu-id="edb3c-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="edb3c-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="edb3c-116">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="edb3c-116">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -78,11 +78,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="edb3c-117">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="edb3c-117">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'visio!Visio.Application#load:member(3)'
-    summary: <span data-ttu-id="edb3c-118">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="edb3c-118">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="edb3c-119">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="edb3c-119">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -96,13 +96,13 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="edb3c-120">其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="edb3c-120">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
   - uid: 'visio!Visio.Application#set:member(1)'
-    summary: '<span data-ttu-id="edb3c-121">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="edb3c-121">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="edb3c-122">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="edb3c-122">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="edb3c-123">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="edb3c-123">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Visio.Application): void`
     name: 'set(properties, options)'
@@ -118,15 +118,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="edb3c-124">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="edb3c-124">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'visio!Visio.Interfaces.ApplicationUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="edb3c-125">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="edb3c-125">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'visio!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'visio!Visio.Application#set:member(2)'
-    summary: '<span data-ttu-id="edb3c-126">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="edb3c-126">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -145,9 +145,9 @@ items:
             - 'visio!Visio.Application:class'
   - uid: 'visio!Visio.Application#showBorders:member'
     summary: |-
-      <span data-ttu-id="edb3c-127">显示或隐藏 iFrame 应用程序边框。</span><span class="sxs-lookup"><span data-stu-id="edb3c-127">Show or hide the iFrame application borders.</span></span>
+      显示或隐藏 iFrame 应用程序边框。
 
-      <span data-ttu-id="edb3c-128">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="edb3c-128">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: showBorders
     fullName: showBorders
     langs:
@@ -161,7 +161,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="edb3c-129">示例</span><span class="sxs-lookup"><span data-stu-id="edb3c-129">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Visio.run(session, function (ctx) {
@@ -178,9 +178,9 @@ items:
           ```
   - uid: 'visio!Visio.Application#showToolbar:member(1)'
     summary: |-
-      <span data-ttu-id="edb3c-130">设置应用程序中特定工具栏的可见性。</span><span class="sxs-lookup"><span data-stu-id="edb3c-130">Sets the visibility of a specific toolbar in the application.</span></span>
+      设置应用程序中特定工具栏的可见性。
 
-      <span data-ttu-id="edb3c-131">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="edb3c-131">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: 'showToolbar(id, show)'
     fullName: 'showToolbar(id, show)'
     langs:
@@ -194,18 +194,18 @@ items:
         description: ''
       parameters:
         - id: id
-          description: <span data-ttu-id="edb3c-132">工具栏的类型</span><span class="sxs-lookup"><span data-stu-id="edb3c-132">The type of the Toolbar</span></span>
+          description: 工具栏的类型
           type:
             - 'visio!Visio.ToolBarType:enum'
         - id: show
-          description: <span data-ttu-id="edb3c-133">工具栏是否 shape.visibile。</span><span class="sxs-lookup"><span data-stu-id="edb3c-133">Whether the toolbar is visibile or not.</span></span>
+          description: 工具栏是否 shape.visibile。
           type:
             - boolean
   - uid: 'visio!Visio.Application#showToolbar:member(2)'
     summary: |-
-      <span data-ttu-id="edb3c-134">设置应用程序中特定工具栏的可见性。</span><span class="sxs-lookup"><span data-stu-id="edb3c-134">Sets the visibility of a specific toolbar in the application.</span></span>
+      设置应用程序中特定工具栏的可见性。
 
-      <span data-ttu-id="edb3c-135">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="edb3c-135">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: 'showToolbar(idString, show)'
     fullName: 'showToolbar(idString, show)'
     langs:
@@ -219,18 +219,18 @@ items:
         description: ''
       parameters:
         - id: idString
-          description: <span data-ttu-id="edb3c-136">工具栏的类型</span><span class="sxs-lookup"><span data-stu-id="edb3c-136">The type of the Toolbar</span></span>
+          description: 工具栏的类型
           type:
             - '"CommandBar" | "PageNavigationBar" | "StatusBar"'
         - id: show
-          description: <span data-ttu-id="edb3c-137">工具栏是否 shape.visibile。</span><span class="sxs-lookup"><span data-stu-id="edb3c-137">Whether the toolbar is visibile or not.</span></span>
+          description: 工具栏是否 shape.visibile。
           type:
             - boolean
   - uid: 'visio!Visio.Application#showToolbars:member'
     summary: |-
-      <span data-ttu-id="edb3c-138">显示或隐藏标准工具栏。</span><span class="sxs-lookup"><span data-stu-id="edb3c-138">Show or hide the standard toolbars.</span></span>
+      显示或隐藏标准工具栏。
 
-      <span data-ttu-id="edb3c-139">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="edb3c-139">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: showToolbars
     fullName: showToolbars
     langs:
@@ -242,7 +242,7 @@ items:
         type:
           - boolean
   - uid: 'visio!Visio.Application#toJSON:member(1)'
-    summary: '<span data-ttu-id="edb3c-140">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="edb3c-140">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="edb3c-141">.</span><span class="sxs-lookup"><span data-stu-id="edb3c-141"></span></span> <span data-ttu-id="edb3c-142">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="edb3c-142"></span></span><!-- --><span data-ttu-id="edb3c-143">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Visio 应用程序对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Visio.Interfaces.ApplicationData`</span><span class="sxs-lookup"><span data-stu-id="edb3c-143">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Visio.Application object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Visio.Interfaces.ApplicationData`</span></span><!-- --><span data-ttu-id="edb3c-144">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="edb3c-144">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Visio 应用程序对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Visio.Interfaces.ApplicationData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -255,7 +255,7 @@ items:
           - 'visio!Visio.Interfaces.ApplicationData:interface'
         description: ''
 references:
-  - uid: 'visio!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'visio!Visio.RequestContext:class'
     name: RequestContext
@@ -265,7 +265,7 @@ references:
     name: Visio.Interfaces.ApplicationLoadOptions
   - uid: 'visio!Visio.Interfaces.ApplicationUpdateData:interface'
     name: Interfaces.ApplicationUpdateData
-  - uid: 'visio!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'visio!Visio.ToolBarType:enum'
     name: Visio.ToolBarType
