--- a/docs/docs-ref-autogen/word/word/word.customproperty.yml
+++ b/docs/docs-ref-autogen/word/word/word.customproperty.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'word!Word.CustomProperty:class'
     summary: |-
-      <span data-ttu-id="bfd94-101">表示自定义属性。</span><span class="sxs-lookup"><span data-stu-id="bfd94-101">Represents a custom property.</span></span>
+      表示自定义属性。
 
-      <span data-ttu-id="bfd94-102">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bfd94-102">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: Word.CustomProperty
     fullName: Word.CustomProperty
     langs:
       - typeScript
     type: class
     extends:
-      - 'word!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: word!
     children:
       - 'word!Word.CustomProperty#context:member'
@@ -28,7 +28,7 @@ items:
       - 'word!Word.CustomProperty#untrack:member(1)'
       - 'word!Word.CustomProperty#value:member'
   - uid: 'word!Word.CustomProperty#context:member'
-    summary: <span data-ttu-id="bfd94-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="bfd94-103">The request context associated with the object.</span></span> <span data-ttu-id="bfd94-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="bfd94-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -41,9 +41,9 @@ items:
           - 'word!Word.RequestContext:class'
   - uid: 'word!Word.CustomProperty#delete:member(1)'
     summary: |-
-      <span data-ttu-id="bfd94-105">删除 custom property 对象。</span><span class="sxs-lookup"><span data-stu-id="bfd94-105">Deletes the custom property.</span></span>
+      删除 custom property 对象。
 
-      <span data-ttu-id="bfd94-106">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bfd94-106">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: delete()
     fullName: delete()
     langs:
@@ -57,9 +57,9 @@ items:
         description: ''
   - uid: 'word!Word.CustomProperty#key:member'
     summary: |-
-      <span data-ttu-id="bfd94-107">获取 customProperty 的键。</span><span class="sxs-lookup"><span data-stu-id="bfd94-107">Gets the key of the custom property.</span></span> <span data-ttu-id="bfd94-108">只读。</span><span class="sxs-lookup"><span data-stu-id="bfd94-108">Read only.</span></span>
+      获取 customProperty 的键。 只读。
 
-      <span data-ttu-id="bfd94-109">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bfd94-109">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: key
     fullName: key
     langs:
@@ -71,15 +71,15 @@ items:
         type:
           - string
   - uid: 'word!Word.CustomProperty#load:member(1)'
-    summary: <span data-ttu-id="bfd94-110">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="bfd94-110">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="bfd94-111">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="bfd94-111">You must call "context.sync()" before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      <span data-ttu-id="bfd94-112">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="bfd94-112">In addition to this signature, this method has the following signatures:</span></span>
+      除了此签名之外，此方法还具有以下签名：
 
-      <span data-ttu-id="bfd94-113">`load(option?: string | string[]): Word.CustomProperty`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="bfd94-113">`load(option?: string | string[]): Word.CustomProperty` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      `load(option?: string | string[]): Word.CustomProperty`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      <span data-ttu-id="bfd94-114">`load(option?: { select?: string; expand?: string; }): Word.CustomProperty`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="bfd94-114">`load(option?: { select?: string; expand?: string; }): Word.CustomProperty` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      `load(option?: { select?: string; expand?: string; }): Word.CustomProperty`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      <span data-ttu-id="bfd94-115">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.CustomProperty`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="bfd94-115">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.CustomProperty` - Only available on collection types.</span></span> <span data-ttu-id="bfd94-116">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="bfd94-116">It is similar to the preceding signature.</span></span> <span data-ttu-id="bfd94-117">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="bfd94-117">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="bfd94-118">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="bfd94-118">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="bfd94-119">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="bfd94-119">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.CustomProperty`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -97,7 +97,7 @@ items:
           type:
             - 'word!Word.Interfaces.CustomPropertyLoadOptions:interface'
   - uid: 'word!Word.CustomProperty#load:member(2)'
-    summary: <span data-ttu-id="bfd94-120">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="bfd94-120">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="bfd94-121">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="bfd94-121">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -111,11 +111,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="bfd94-122">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="bfd94-122">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'word!Word.CustomProperty#load:member(3)'
-    summary: <span data-ttu-id="bfd94-123">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="bfd94-123">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="bfd94-124">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="bfd94-124">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -129,13 +129,13 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="bfd94-125">其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="bfd94-125">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
   - uid: 'word!Word.CustomProperty#set:member(1)'
-    summary: '<span data-ttu-id="bfd94-126">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="bfd94-126">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="bfd94-127">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="bfd94-127">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="bfd94-128">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="bfd94-128">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Word.CustomProperty): void`
     name: 'set(properties, options)'
@@ -151,15 +151,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="bfd94-129">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="bfd94-129">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'word!Word.Interfaces.CustomPropertyUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="bfd94-130">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="bfd94-130">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'word!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'word!Word.CustomProperty#set:member(2)'
-    summary: '<span data-ttu-id="bfd94-131">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="bfd94-131">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -177,7 +177,7 @@ items:
           type:
             - 'word!Word.CustomProperty:class'
   - uid: 'word!Word.CustomProperty#toJSON:member(1)'
-    summary: '<span data-ttu-id="bfd94-132">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="bfd94-132">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="bfd94-133">.</span><span class="sxs-lookup"><span data-stu-id="bfd94-133"></span></span> <span data-ttu-id="bfd94-134">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="bfd94-134"></span></span><!-- --><span data-ttu-id="bfd94-135">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 CustomProperty 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Word.Interfaces.CustomPropertyData`</span><span class="sxs-lookup"><span data-stu-id="bfd94-135">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Word.CustomProperty object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Word.Interfaces.CustomPropertyData`</span></span><!-- --><span data-ttu-id="bfd94-136">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="bfd94-136">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 CustomProperty 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Word.Interfaces.CustomPropertyData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -190,7 +190,7 @@ items:
           - 'word!Word.Interfaces.CustomPropertyData:interface'
         description: ''
   - uid: 'word!Word.CustomProperty#track:member(1)'
-    summary: '<span data-ttu-id="bfd94-137">根据文档中的相应更改来跟踪对象，以便进行自动调整。</span><span class="sxs-lookup"><span data-stu-id="bfd94-137">Track the object for automatic adjustment based on surrounding changes in the document.</span></span> <span data-ttu-id="bfd94-138">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="bfd94-138">This call is a shorthand for context.trackedObjects.add(thisObject).</span></span> <span data-ttu-id="bfd94-139">如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。</span><span class="sxs-lookup"><span data-stu-id="bfd94-139">If you are using this object across ".sync" calls and outside the sequential execution of a ".run" batch, and get an "InvalidObjectPath" error when setting a property or invoking a method on the object, you needed to have added the object to the tracked object collection when the object was first created.</span></span>'
+    summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。
     name: track()
     fullName: track()
     langs:
@@ -204,9 +204,9 @@ items:
         description: ''
   - uid: 'word!Word.CustomProperty#type:member'
     summary: |-
-      <span data-ttu-id="bfd94-140">获取自定义属性的值类型。</span><span class="sxs-lookup"><span data-stu-id="bfd94-140">Gets the value type of the custom property.</span></span> <span data-ttu-id="bfd94-141">可能的值包括： String、Number、Date、Boolean。</span><span class="sxs-lookup"><span data-stu-id="bfd94-141">Possible values are: String, Number, Date, Boolean.</span></span> <span data-ttu-id="bfd94-142">只读。</span><span class="sxs-lookup"><span data-stu-id="bfd94-142">Read only.</span></span>
+      获取自定义属性的值类型。 可能的值包括： String、Number、Date、Boolean。 只读。
 
-      <span data-ttu-id="bfd94-143">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bfd94-143">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -218,7 +218,7 @@ items:
         type:
           - 'word!Word.CustomProperty#type~0:complex'
   - uid: 'word!Word.CustomProperty#untrack:member(1)'
-    summary: '<span data-ttu-id="bfd94-144">释放与此对象关联的内存（如果先前已跟踪过）。</span><span class="sxs-lookup"><span data-stu-id="bfd94-144">Release the memory associated with this object, if it has previously been tracked.</span></span> <span data-ttu-id="bfd94-145">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="bfd94-145">This call is shorthand for context.trackedObjects.remove(thisObject).</span></span> <span data-ttu-id="bfd94-146">拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。</span><span class="sxs-lookup"><span data-stu-id="bfd94-146">Having many tracked objects slows down the host application, so please remember to free any objects you add, once you''re done using them.</span></span> <span data-ttu-id="bfd94-147">在内存释放生效之前，你需要调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="bfd94-147">You will need to call "context.sync()" before the memory release takes effect.</span></span>'
+    summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前，你需要调用“context.sync()”。
     name: untrack()
     fullName: untrack()
     langs:
@@ -232,9 +232,9 @@ items:
         description: ''
   - uid: 'word!Word.CustomProperty#value:member'
     summary: |-
-      <span data-ttu-id="bfd94-148">获取或设置自定义属性的值。</span><span class="sxs-lookup"><span data-stu-id="bfd94-148">Gets or sets the value of the custom property.</span></span> <span data-ttu-id="bfd94-149">请注意，即使 Word for the web 和 .docx 文件格式允许这些属性任意长，Word 的桌面版本也会将字符串值截断为 255 16 位字符（可能通过分解代理项对来创建无效的 unicode）。</span><span class="sxs-lookup"><span data-stu-id="bfd94-149">Note that even though Word for the web and the docx file format allow these properties to be arbitrarily long, the desktop version of Word will truncate string values to 255 16-bit chars (possibly creating invalid unicode by breaking up a surrogate pair).</span></span>
+      获取或设置自定义属性的值。 请注意，即使 Word for the web 和 .docx 文件格式允许这些属性任意长，Word 的桌面版本也会将字符串值截断为 255 16 位字符（可能通过分解代理项对来创建无效的 unicode）。
 
-      <span data-ttu-id="bfd94-150">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bfd94-150">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
@@ -246,7 +246,7 @@ items:
         type:
           - any
 references:
-  - uid: 'word!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'word!Word.RequestContext:class'
     name: RequestContext
@@ -256,7 +256,7 @@ references:
     name: Word.Interfaces.CustomPropertyLoadOptions
   - uid: 'word!Word.Interfaces.CustomPropertyUpdateData:interface'
     name: Interfaces.CustomPropertyUpdateData
-  - uid: 'word!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'word!Word.Interfaces.CustomPropertyData:interface'
     name: Word.Interfaces.CustomPropertyData
